# medusa

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: medusa_icd.json.in
common/: CMakeLists.txt
common/utils/: CMakeLists.txt  log.cpp  log.hpp
docs/: nir_to_vir.md  shader_info_h.md  spirv_to_nir.md  v3d_compiler_h.md  vulkan_compute_shader_files.md
medusa/: CMakeLists.txt  git_sha1.h  vk_instance.cpp  vk_instance.hpp
medusa/broadcom/: V3D_HARDWARE_ARCHITECTURE.md
medusa/broadcom/cle/: README.md  README_VULKAN.md  v3d_packet_v21_pack.h  v3d_packet_v42_pack.h  v3d_packet_v71_pack.h  v3d_xml.h
medusa/broadcom/clif/: clif_dump.c  clif_private.h
medusa/broadcom/common/: v3d_debug.c  v3d_debug.h  v3d_device_info.c  v3d_device_info.h  v3d_util.h
medusa/broadcom/compiler/: v3d_nir_lower_algebraic.c
medusa/broadcom/perfcntrs/: v3d_perfcntrs.c
medusa/broadcom/qpu/: TMU_CACHE_ARCHITECTURE.md  UNIFORM_LOAD_WITH_ALU.md  WHY_16_THREADS_PER_QPU.md  qpu_instr.h
medusa/broadcom/qpu/docs/: QPU_INSTR_STRUCTURES.md  SIG_ADDR_DETAILED.md  V3D_QPU_ADD_OPS_DETAILED.md  V3D_QPU_SIG_DETAILED.md  V3D_QPU_WADDR_DETAILED.md
medusa/broadcom/vulkan/: v3dv_bo.c  v3dv_entrypoints.c  v3dv_entrypoints.h  v3dv_private.h
medusa/compiler/: builtin_types.c  builtin_types.h
medusa/compiler/nir/: nir_builder_opcodes.h  nir_constant_expressions.c  nir_intrinsics.c  nir_intrinsics.h  nir_intrinsics_indices.h  nir_opcodes.c  nir_opcodes.h
medusa/compiler/spirv/: spirv_info.c  spirv_info.h  vtn_gather_types.c  vtn_generator_ids.h
medusa/driver/: v3dv_device.cpp  v3dv_device.h  v3dv_device.hpp  v3dv_entrypoints.c  v3dv_entrypoints.h  v3dv_instance.c  v3dv_instance.h  v3dv_physical_device.h
medusa/loader/: commit-timing-v1-client-protocol.h  commit-timing-v1-protocol.c  fifo-v1-client-protocol.h  fifo-v1-protocol.c  linux-dmabuf-unstable-v1-client-protocol.h  linux-dmabuf-unstable-v1-protocol.c  linux-drm-syncobj-v1-client-protocol.h  linux-drm-syncobj-v1-protocol.c  presentation-time-client-protocol.h  presentation-time-protocol.c  tearing-control-v1-client-protocol.h
medusa/runtime/: vk_alloc.c  vk_alloc.h  vk_api.c  vk_api.cpp  vk_device.h  vk_dispatch_table.c  vk_dispatch_table.h  vk_extensions.c  vk_extensions.h  vk_instance.c  vk_instance.cpp  vk_instance.h  vk_instance.hpp  vk_object.c  vk_object.h  vk_physical_device.h
medusa/util/format/: u_format_gen.h  u_format_table.c
medusa/utils/: log.c  log.h  macro.h
medusa/vulkan/: wsi_common_entrypoints.c  wsi_common_entrypoints.h
medusa/vulkan/runtime/: vk_cmd_enqueue_entrypoints.c  vk_cmd_enqueue_entrypoints.h  vk_cmd_queue.h  vk_physical_device.c  vk_physical_device_features.h  vk_physical_device_properties.c  vk_physical_device_properties.h  vk_physical_device_spirv_caps.c  vk_synchronization_helpers.c
medusa/vulkan/util/: vk_dispatch_table.h  vk_enum_defines.h  vk_enum_to_str.c  vk_enum_to_str.h  vk_extensions.c
medusa2/: CMakeLists.txt  main.cpp
medusa2/broadcom/vulkan/: v3dv_device.c  v3dv_entrypoints.c
medusa2/device/: device.c  device.h
medusa2/include/drm-uapi/: v3d_drm.h.md
medusa2/medusa/: medusa_device.c  medusa_device.h  medusa_instance.c  medusa_instance.h  medusa_physical_device.c  medusa_physical_device.h
medusa2/util/: disk_cache.c  list.h  log.c  log.h  os_file_notify.c
medusa2/utils/: log.c
medusa2/vulkan/runtime/: vk_cmd_queue.c  vk_common_entrypoints.c  vk_common_entrypoints.h  vk_dispatch_trampolines.c  vk_format_info.c  vk_format_info.h  vk_physical_device_features.c
medusa2/vulkan/util/: vk_dispatch_table.c  vk_extensions.h  vk_struct_type_cast.h
medusa3/: CMakeLists.txt  main.cpp  medusa_bo.c  medusa_bo.h  medusa_buffer.c  medusa_buffer.h  medusa_device.c  medusa_device.h  medusa_instance.c  medusa_instance.h  medusa_memory.c  medusa_memory.h  medusa_physical_device.c  medusa_physical_device.h
medusa3/common/: medusa_util.h
medusa3/medusa/: medusa_bo.h  medusa_physical_device.c
medusa3/util/: driconf_static.h  libsync.h  shader_stats.h
sample/: CMakeLists.txt  main.cpp
sample/medusa2/sample1/: CMakeLists.txt
sample/medusa3/: CMakeLists.txt
sample/medusa3/sample1/: CMakeLists.txt  main.cpp
sample/v3d/: CMakeLists.txt
sample/v3d/sample1/: CMakeLists.txt  NOP_EXPLANATION.md  QPU_HARDWARE_ANALYSIS.md  README_QPU.md  TIMING_REQUIREMENTS.md  qpu_minimal.c
sample/v3d/sample2/: CMakeLists.txt  qpu_simple_add.c  test_immediate.c
scripts/: copy.sh
scripts/run/: run-local.sh  run-rpi5.sh
tasks/: implement_enumerate_functions.md  medusa_utils_shared_library.md
